Fix T71488: Flipping Custom Split Normal Data leads to artifacts

The winding order of the faces changes when flipping the faces.
This lead to the loop indices changing as well.

Now we take this into account when restoring and flipping the custom
normals. Before the normals would be swapped.